src/components/styles.css
:root {
  --white: #ffffff;
  --priamry-color: #c41432;
  --secondary-color: #00bd56;
  --solid-grey: #f3f4fb;

  /* FONT */
  --font-color-black: #000;
  --font-color-dark: #313131;
  --font-color-grey: #000;
  --font-family: 'Fira Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
    Arial, sans-serif;

  /* BUTTON */
  --button-height: 48px;
  --button-small: 35px;
  --button-radius: 24px;
  --button-font-size: 16px;
  --button-font-size-small: 12px;
  --primary-button-color: linear-gradient(100deg, #f14545 13%, #c41432 87%);
  --primary-button-color-hover: linear-gradient(100deg, #c41432 13%, #c41432 87%);
  --primary-button-bg-color-disabled: #80909f;
  --secondary-button-bg-color: white;
  --secondary-button-color: #eb2629;
  --secondary-button-border-color: #eb2629;
  --secondary-button-border-color-disabled: #667584;
  --secondary-button-color-disabled: #667584;
  /* BORDER */
  --border-color: #c7c7c7;

  /* INPUT */
  --input-placeholder: #c7c7c7;
  --input-label-font-size: 16px;

  /* CARD */
  --card-disabled: #ececec;
  --card-active-color: linear-gradient(110deg, #6baa12 14%, #009e9b 87%);
}

a,
abbr,
acronym,
address,
applet,
article,
aside,
audio,
b,
big,
blockquote,
body,
canvas,
caption,
center,
cite,
code,
dd,
del,
details,
dfn,
div,
dl,
dt,
em,
embed,
fieldset,
figcaption,
figure,
footer,
form,
h1,
h2,
h3,
h4,
h5,
h6,
header,
hgroup,
html,
i,
iframe,
img,
ins,
kbd,
label,
legend,
li,
mark,
menu,
nav,
object,
ol,
output,
p,
pre,
q,
ruby,
s,
samp,
section,
small,
span,
strike,
strong,
sub,
summary,
sup,
table,
tbody,
td,
tfoot,
th,
thead,
time,
tr,
tt,
u,
ul,
var,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  vertical-align: baseline;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html,
body,
#root {
  height: 100%;
  font-size: var(--button-font-size-small);
  line-height: 1.5;
  color: var(--font-color-dark);
  font-family: var(--font-family);
}

body,
button,
input,
textarea {
  font-size: 16px;
  font-family: var(--font-family);
}

hr {
  border-color: #c4c4c4;
  margin: 0px 0px 15px 0px;
  border-top: 0;
}

strong {
  font-weight: 700;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
}

input:disabled {
  background-color: transparent;
}

/* Firefox */
input[type='number'] {
  -moz-appearance: textfield;
}

input::placeholder {
  color: var(--input-placeholder);
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
  -webkit-text-size-adjust: initial;
  -webkit-box-shadow: 0 0 0px 1000px #fff inset;
  transition: background-color 5000s ease-in-out 0s;
}

